crates/carta/tests/snapshots/golden_writer__revealjs__common__raw-html-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>text <cite>raw</cite> more</p>
</section>
