crates/carta/tests/snapshots/golden_writer__revealjs__common__raw-latex-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>a b</p>
</section>
