crates/carta/tests/snapshots/golden_writer__revealjs__common__smart-ellipsis-dashes.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>wait… an en–dash and an em—dash</p>
</section>
