crates/carta/tests/snapshots/golden_writer__revealjs__common__soft-break.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>first line second line</p>
</section>
