crates/carta/tests/snapshots/golden_writer__revealjs__common__span-empty-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><span class="real" data-keep="v">x</span></p>
</section>
