crates/carta/tests/snapshots/golden_writer__revealjs__common__span-semantic.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><kbd id="theid" class="rest mid" data-k="v"><mark>x</mark></kbd>
<dfn>term</dfn></p>
</section>
