crates/carta/tests/snapshots/golden_writer__revealjs__common__span.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>a <span id="s" class="c" data-k="v">styled</span> word</p>
</section>
