crates/carta/tests/snapshots/golden_writer__revealjs__common__subscript-fallback.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>water H<sub>2</sub>O and sub<sub>ab</sub> here</p>
</section>
