crates/carta/tests/snapshots/golden_writer__revealjs__common__superscript-fallback.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>x super<sup>(ab)</sup> here</p>
</section>
