crates/carta/tests/snapshots/golden_writer__revealjs__common__tab-escape.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p>a	b <code>c	d</code></p>
<pre><code>	x	y</code></pre>
</section>
