crates/carta/tests/snapshots/golden_writer__revealjs__common__underline-smallcaps.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><u>under</u> <span class="smallcaps">small</span></p>
</section>
